--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<source>17</source>
+					<target>17</target>
+					<verbose>true</verbose>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
