--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,10 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0</version> <!-- Use a versão mais recente do Surefire -->
 				<configuration>
-					<release>17</release>
+					<skipTests>true</skipTests> <!-- Configuração para ignorar os testes -->
 				</configuration>
 			</plugin>
 			<plugin>
