<feat,test> GeminiAI configuration and initial implementation test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=${APP_PROFILE:prod}
+spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 
 cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
@@ -9,3 +9,7 @@ file.upload-dir=${FILE_UPLOAD_DIR:./uploads}
 #file.upload-dir=uploads
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+
+google.api.key=${GOOGLE_API_KEY}
+gemini.url=${GOOGLE_API_URL}
