--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,9 @@
-spring.profiles.active=${APP_PROFILE:test}
+spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
 
 cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
 
 server.error.include-stacktrace=never
-
-file.upload-dir=${FILE_UPLOAD_DIR:./uploads}
-#file.upload-dir=uploads
-spring.servlet.multipart.max-file-size=20MB
-spring.servlet.multipart.max-request-size=20MB
-
 
 google.api.key=${GOOGLE_API_KEY}
 gemini.url=${GOOGLE_API_URL}
