--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE:prod}
 spring.jpa.open-in-view=false
 
 cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
@@ -7,3 +7,4 @@ server.error.include-stacktrace=never
 
 google.api.key=${GOOGLE_API_KEY}
 gemini.url=${GOOGLE_API_URL}
+api.key=${JORNADA_API_KEY}
