--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:${STACKHERO_MYSQL_DATABASE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 server.port=${PORT:8080}
+
+google.api.key=${GOOGLE_API_KEY}
+gemini.url=${GOOGLE_API_URL}
+api.key=${JORNADA_API_KEY}
