--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,4 +5,4 @@ server.port=${PORT:8080}
 
 google.api.key=${GOOGLE_API_KEY}
 gemini.url=${GOOGLE_API_URL}
-api.key=${JORNADA_API_KEY}
+api.key=${API_KEY}
