--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.profiles.active=${APP_PROFILE:prod}
+spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 
 cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
 
 server.error.include-stacktrace=never
+
+
+google.api.key=${GOOGLE_API_KEY}
+gemini.url=${GOOGLE_API_URL}
