<test> Test implementation

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:${MYSQL_DATABASE_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-server.port=${PORT:8080}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://jornada-db.cbmcgkqsi1o7.us-east-2.rds.amazonaws.com:3306/jornadadb
+spring.datasource.username=admin
+spring.datasource.password=jornada123
 
-google.api.key=${GOOGLE_API_KEY}
-gemini.url=${GOOGLE_API_URL}
-api.key=${API_KEY}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
