--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jornada?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3307/jornada?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
